--- a/sass/style.scss
+++ b/sass/style.scss
@@ -6,4 +6,7 @@
 @import "base";
 
 // blocks
-@import "blocks/btn";
+@import "blocks/button";
+@import "blocks/title";
+@import "blocks/header";
+@import "blocks/logo";
