--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ table {
 
 html {
   min-height: 100%;
-  font-size: 7px; }
+  font-size: 8px; }
 
 body {
   position: relative;
@@ -70,7 +70,7 @@ body {
   width: 100%;
   max-width: 100%;
   min-height: 100%;
-  font: 300 1.6rem/1.3 "Fira Sans", "Arial", sans-serif;
+  font: normal 1.6rem/1.3 "Fira Sans", "Arial", sans-serif;
   color: #444444;
   overflow-x: hidden;
   -webkit-text-size-adjust: none;
@@ -86,7 +86,7 @@ dt {
 a {
   text-decoration: none;
   color: #b5b9be; }
-  a:active, a:focus, a:hover {
+  a:hover, a:focus, a:active {
     text-decoration: underline; }
 
 .page-wrapper {
@@ -94,6 +94,12 @@ a {
   min-height: 100%;
   height: auto !important;
   overflow: hidden; }
+
+.container {
+  width: 100%;
+  max-width: 1230px;
+  margin: 0 auto;
+  padding: 0 30px; }
 
 .back-top {
   position: fixed;
@@ -129,6 +135,64 @@ a {
   color: #fff; }
   .btn:hover, .btn:active {
     text-decoration: none; }
+
+.title {
+  margin: 2rem 0;
+  padding: 0;
+  font: bold 3.6rem "Fira Sans", "Arial", sans-serif;
+  text-align: center;
+  color: #50555f; }
+  .title--white {
+    color: #fff; }
+
+.header {
+  width: 100%;
+  background-color: #4680f8;
+  box-shadow: 0 2px 13px 0 rgba(0, 0, 0, 0.2); }
+
+.header__inner {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-align: center;
+      align-items: center; }
+
+.header__nav-list {
+  display: -ms-flexbox;
+  display: flex; }
+
+.header__nav-item a {
+  padding: 2rem;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+  color: #fff;
+  border-radius: 4px;
+  transition: all 0.3s; }
+  .header__nav-item a:active, .header__nav-item a:focus, .header__nav-item a:hover {
+    text-decoration: none;
+    background-color: #2768ee; }
+
+.header__phone-list {
+  text-align: right; }
+
+.header__phone-item a {
+  font: bold 3rem "Fira Sans", "Arial", sans-serif;
+  color: #fff;
+  transition: all 0.3s;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis; }
+
+.logo {
+  height: 80px; }
+  .logo img {
+    display: block;
+    margin: 10px 0;
+    width: 230px;
+    max-width: 100%;
+    height: 60px; }
   @media (min-width: 767px) {
 
   html {
@@ -137,3 +201,11 @@ a {
 
   html {
     font-size: 10px; } }
+  @media (max-width: 1230px) {
+
+  .container {
+    padding: 0 15px; } }
+  @media (max-width: 767px) {
+
+  .header__nav-list {
+    display: none; } }
