--- a/sass/base.scss
+++ b/sass/base.scss
@@ -7,7 +7,7 @@
 
 html {
 	min-height: 100%;
-	font-size: 7px;
+	font-size: 8px;
 
 	@media (min-width: $tablet) {
 		font-size: 9px;
@@ -25,7 +25,7 @@ body {
 	width: 100%;
 	max-width: 100%;
 	min-height: 100%;
-	font: 300 1.6rem/1.3 $font_1;
+	font: normal 1.6rem/1.3 $font_1;
 	color: $color_body;
 	overflow-x: hidden;
 	-webkit-text-size-adjust: none;
@@ -44,9 +44,9 @@ a {
 	text-decoration: none;
 	color: $color_link;
 
-	&:active,
+	&:hover,
 	&:focus,
-	&:hover {
+	&:active {
 		text-decoration: underline;
 	}
 }
@@ -56,6 +56,10 @@ a {
 	min-height: 100%;
 	height: auto !important;
 	overflow: hidden;
+}
+
+.container {
+	@include container;
 }
 
 // back to top
