--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,5 +1,7 @@
 // colors
 $color_body: #444444;
+$color_title: #50555f;
+
 $color_shadow: rgba(76, 76, 76, 0.75);
 $color_link: rgba(181, 185, 190, 1);
 $color_field: rgba(50, 55, 73, 1);
@@ -10,6 +12,9 @@ $gray_dark: #3c3c3b;
 $gray: #878787;
 $gray_light: #e2e2e4;
 $gray_lightest: #f5f5f5;
+
+$blue: rgb(70, 128, 248);
+$blue_dark: rgb(39, 104, 238);
 
 // shadow
 $img-shadow: 2px 2px 5px $color_shadow;
