--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -1,19 +1,33 @@
-.btn {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin: 1rem;
-	padding: 1rem 2rem;
-	border: none;
-	background-color: $gray;
-	cursor: pointer;
+.button {
+	position: relative;
+	display: inline-block;
+	max-width: 270px;
+	padding: 2rem 3rem;
+	vertical-align: middle;
 	text-align: center;
 	text-decoration: none;
-	font: normal 2.2rem $font_1;
+	text-transform: uppercase;
+	white-space: normal;
+	word-wrap: normal;
+	font-size: 16px;
+	border-radius: 4px;
+	border: none;
 	color: #fff;
+	background-color: $orange;
+	box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.2), inset 0px 1px 0px 0px rgba(255, 255, 255, 0.3);
+	outline: none;
+	user-select: none;
+	touch-action: manipulation;
+	-webkit-appearance: button;
 
 	&:hover,
-	&:active {
+	&:focus {
+		cursor: pointer;
 		text-decoration: none;
+		background-color: $orange_light;
+	}
+	&:active {
+		background-color: $orange;
+		box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
 	}
 }
