--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,3 +10,14 @@
 @import "blocks/title";
 @import "blocks/header";
 @import "blocks/logo";
+@import "blocks/page-top";
+@import "blocks/points";
+@import "blocks/listing";
+@import "blocks/order";
+@import "blocks/form";
+@import "blocks/special";
+@import "blocks/reasons";
+@import "blocks/brends";
+@import "blocks/contacts";
+@import "blocks/footer";
+@import "blocks/modal";
