--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -1,39 +1,83 @@
 .modal {
 	z-index: 1000;
 	position: fixed;
-	top: 50%;
-	left: 50%;
-	width: 60rem;
-	max-width: 100%;
-	height: 40rem;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: none;
+	width: 100%;
+	max-width: 360px;
+	height: auto;
 	max-height: 100%;
-	background: rgba(255,255,255, 0.9);
-	box-shadow: 0.4rem 0.4rem 0.5rem $color_shadow;
-	outline: 0;
+	margin: auto;
+	outline: none;
 	overflow: hidden;
-	transform: translate(-50%, -50%);
-	transition: all .5s ease;
+	visibility: hidden;
 
 	// show modal window
 	&_show {
 		display: block;
-		animation: bounce 0.6s;
+		visibility: visible !important;
+		animation-name: expandUp;
+		animation-duration: 0.7s;
+		animation-timing-function: ease;
 	}
 	// background
 	&_bg {
-		z-index: 50;
-		position: fixed;
+		z-index: 500;
+		position: absolute;
 		top: 0;
 		left: 0;
 		display: none;
 		width: 100%;
 		height: 100%;
-		background: rgba(0, 0, 0, 0.6);
+    background-color: rgba(70, 128, 248, .5);
 		transition: all .5s ease;
+	}
+	// states
+	&--call {
+		height: 450px;
+		background-image: url("../img/modal-bg.png");
+
+		@media (max-width: 400px) {
+			max-width: 100%;
+			height: 410px;
+		}
+	}
+	&--sucsess {
+		max-width: 600px;
+		height: 290px;
+		border-radius: 4px;
+		text-align: center;
+	  background-color: rgb(255, 255, 255);
+	  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.2);
+
+		.order__subtitle {
+			font-size: 36px;
+			color: $blue;
+		}
+		.modal__guts:after {
+			content: "";
+			position: absolute;
+			bottom: 30px;
+			left: 0;
+			right: 0;
+			margin: auto;
+			width: 90px;
+			height: 90px;
+			background: url("../img/check.svg") center no-repeat;
+			background-size: contain;
+
+			@media (max-width: $mobile_full) {
+				bottom: 5px;
+			}
+		}
 	}
 }
 
 .modal__close {
+	display: none;
 	z-index: 1;
 	position: absolute;
 	top: 1rem;
@@ -62,52 +106,41 @@
 	left: 0;
 	width: 100%;
 	height: 100%;
-	padding: 6rem 2rem 2rem 2rem;
-	text-align: center;
-	font: 300 2rem $font_1;
+	padding: 20px;
 	overflow: auto;
-}
 
-/* Animation */
-@-webkit-keyframes bounce {
-	0% {
-		-webkit-transform: translateY(-2000px);
-		transform: translateY(-2000px);
-	}
-
-	70% {
-		-webkit-transform: translateY(30px);
-		transform: translateY(30px);
-	}
-
-	90% {
-		-webkit-transform: translateY(-10px);
-		transform: translateY(-10px);
-	}
-
-	100% {
-		-webkit-transform: translateY(0);
-		transform: translateY(0);
+	@media (max-width: 400px) {
+		padding: 20px 30px;
 	}
 }
-@keyframes bounce {
+
+// modal animation
+@keyframes expandUp {
 	0% {
-		-webkit-transform: translateY(-2000px);
-		transform: translateY(-2000px);
+		transform: translateY(100%) scale(0.6) scaleY(0.5);
 	}
-
-	70% {
-		-webkit-transform: translateY(30px);
-		transform: translateY(30px);
+	60%{
+		transform: translateY(-7%) scaleY(1.12);
 	}
-
-	90% {
-		-webkit-transform: translateY(-10px);
-		transform: translateY(-10px);
+	75%{
+		transform: translateY(3%);
 	}
-
 	100% {
-		-webkit-transform: translateY(0);
-		transform: translateY(0);
+		transform: translateY(0%) scale(1) scaleY(1);
+	}
+}
+
+@-webkit-keyframes expandUp {
+	0% {
+		-webkit-transform: translateY(100%) scale(0.6) scaleY(0.5);
+	}
+	60%{
+		-webkit-transform: translateY(-7%) scaleY(1.12);
+	}
+	75%{
+		-webkit-transform: translateY(3%);
+	}
+	100% {
+		-webkit-transform: translateY(0%) scale(1) scaleY(1);
 	}
 }
