--- a/sass/blocks/title.scss
+++ b/sass/blocks/title.scss
@@ -1,6 +1,6 @@
 .title {
-	margin: 2rem 0;
-	padding: 0;
+	margin: 0;
+	padding: 6rem 0 2rem 0;
 	font: bold 3.6rem $font_1;
 	text-align: center;
 	color: $color_title;
