--- a/sass/mixins.scss
+++ b/sass/mixins.scss
@@ -9,7 +9,7 @@
 
 @mixin container {
   width: 100%;
-  max-width: 1230px;
+  max-width: 1170px;
   margin: 0 auto;
 	padding: 0 30px;
 
@@ -24,8 +24,8 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-	min-width: 100%;
-	min-height: 100%;
+	// min-width: 100%;
+	// min-height: 100%;
 }
 
 // vertical centering
