--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -1,20 +1,28 @@
 // colors
 $color_body: #444444;
 $color_title: #50555f;
+$color_link: #33494e;
 
 $color_shadow: rgba(76, 76, 76, 0.75);
-$color_link: rgba(181, 185, 190, 1);
 $color_field: rgba(50, 55, 73, 1);
 $color_field_hover: rgba(50, 60, 75, 1);
 $color_field_border: rgba(220, 220, 220, 1);
 
 $gray_dark: #3c3c3b;
 $gray: #878787;
-$gray_light: #e2e2e4;
+$gray_light: #dedfe0;
 $gray_lightest: #f5f5f5;
 
+$red: #f24941;
+
+$blue_light: rgb(91, 173, 255);
 $blue: rgb(70, 128, 248);
 $blue_dark: rgb(39, 104, 238);
+
+$orange: rgb(255, 110, 0);
+$orange_light: rgb(255, 132, 0);
+
+$yellow: #ffcf2d;
 
 // shadow
 $img-shadow: 2px 2px 5px $color_shadow;
@@ -26,4 +34,5 @@ $font_1: "Fira Sans", "Arial", sans-serif;
 $mobile: 320px;
 $mobile_full: 468px;
 $tablet: 767px;
+$tablet_full: 890px;
 $desktop: 1230px;
