--- a/sass/blocks/brends.scss
+++ b/sass/blocks/brends.scss
@@ -20,6 +20,7 @@
   border-style: solid;
   border-radius: 4px;
   background-color: #fff;
+	transition: all .3s;
 
 	&:nth-child(6n+6) {
 		margin-right: 0;
@@ -27,12 +28,20 @@
 
 	img {
 		@include centerImg;
-		max-width: 100%;
+		max-width: 80%;
+	}
+
+	&:hover,
+	&:active,
+	&:focus {
+		cursor: pointer;
+		outline: none;
+		transform: scale(1.1);
 	}
 
 	@media (max-width: $mobile_full) {
-		width: 25%;
-		margin-right: 12.5%;
+		width: 30%;
+		margin-right: 5%;
 
 		&:nth-child(6n+6) {
 			margin-right: 0;
