--- a/sass/blocks/button.scss
+++ b/sass/blocks/button.scss
@@ -2,7 +2,7 @@
 	position: relative;
 	display: inline-block;
 	max-width: 270px;
-	padding: 2rem 3rem;
+	padding: 1.5rem 3rem;
 	vertical-align: middle;
 	text-align: center;
 	text-decoration: none;
@@ -29,5 +29,8 @@
 	&:active {
 		background-color: $orange;
 		box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
+	}
+	@media (max-width: $mobile_full) {
+		padding: 12px 20px;
 	}
 }
