--- a/sass/blocks/contacts.scss
+++ b/sass/blocks/contacts.scss
@@ -4,10 +4,13 @@
 
 .contacts__content {
 	width: 50%;
+	font-size: 14px;
 
 	.title {
+		padding: 50px 0 15px 0;
 		text-align: left;
 	}
+
 	p {
 		margin-bottom: 20px;
 	}
@@ -19,13 +22,26 @@
 			text-align: center;
 		}
 	}
+	@media (max-width: 1140px) {
+		br {
+			display: none;
+		}
+	}
+	@media (max-width: $mobile_full) {
+		p {
+			margin-bottom: 10px;
+		}
+		p:last-of-type {
+			text-align: justify;
+		}
+	}
 }
 
 .contacts__map {
 	position: absolute;
 	top: 0;
 	right: 0;
-	width: 50%;
+	width: 45%;
 	height: 100%;
 	background-color: $gray_lightest;
 	overflow: hidden;
@@ -37,11 +53,16 @@
 }
 
 .contacts__list {
+	padding-top: 10px;
+	padding-bottom: 20px;
 	display: flex;
 	justify-content: space-between;
 
 	@media (max-width: 960px) {
 		text-align: left;
+	}
+	@media (max-width: $mobile_full) {
+		flex-wrap: wrap;
 	}
 }
 
@@ -49,7 +70,18 @@
 	width: 45%;
 
 	&:first-child {
-		margin-right: 65px;
+		margin-right: 10%;
+	}
+
+	&:last-child {
+		.contacts__item {
+			margin-bottom: 15px;
+		}
+	}
+
+	@media (max-width: $mobile_full) {
+		width: 100%;
+		margin: 0;
 	}
 }
 
@@ -59,10 +91,14 @@
 }
 
 p.contacts__name {
-	margin-bottom: 10px;
+	margin-bottom: 8px;
 	font-size: 18px;
 	font-weight: bold;
 	color: $blue;
+}
+
+.contacts__link--mail {
+	text-decoration: underline;
 }
 
 .contacts__icon {
@@ -72,5 +108,22 @@ p.contacts__name {
 	width: 35px;
 	height: 35px;
 	border-radius: 50%;
-	background-color: $orange;
+	background: center no-repeat;
+	background-color: #fff;
+
+	&--adress {
+		background-image: url("../img/icons/adress.svg");
+	}
+	&--mail {
+		background-image: url("../img/icons/mail.svg");
+	}
+	&--mobile {
+		background-image: url("../img/icons/phone.svg");
+	}
+	&--phone {
+		background-image: url("../img/icons/phones.svg");
+	}
+	&--time {
+		background-image: url("../img/icons/time.svg");
+	}
 }
