--- a/sass/blocks/logo.scss
+++ b/sass/blocks/logo.scss
@@ -8,4 +8,13 @@
 		max-width: 100%;
 		height: 60px;
 	}
+	@media (max-width: $mobile_full) {
+		height: 55px;
+
+		img {
+			width: 130px;
+			height: auto;
+			margin: 10px 0 0 0;
+		}
+	}
 }
