--- a/sass/blocks/modal.scss
+++ b/sass/blocks/modal.scss
@@ -15,7 +15,7 @@
 	overflow: hidden;
 	visibility: hidden;
 
-	// show modal window
+	// show modal
 	&_show {
 		display: block;
 		visibility: visible !important;
@@ -23,6 +23,7 @@
 		animation-duration: 0.7s;
 		animation-timing-function: ease;
 	}
+
 	// background
 	&_bg {
 		z-index: 500;
@@ -35,16 +36,19 @@
     background-color: rgba(70, 128, 248, .5);
 		transition: all .5s ease;
 	}
+
 	// states
 	&--call {
-		height: 450px;
+		height: 500px;
 		background-image: url("../img/modal-bg.png");
 
-		@media (max-width: 400px) {
+		@media (max-width: 370px) {
 			max-width: 100%;
 			height: 410px;
+			background-size: 320px;
 		}
 	}
+
 	&--sucsess {
 		max-width: 600px;
 		height: 290px;
@@ -57,6 +61,11 @@
 			font-size: 36px;
 			color: $blue;
 		}
+
+		.modal__guts p {
+			color: $color_body;
+		}
+
 		.modal__guts:after {
 			content: "";
 			position: absolute;
@@ -107,10 +116,17 @@
 	width: 100%;
 	height: 100%;
 	padding: 20px;
+	padding-top: 35px;
 	overflow: auto;
 
-	@media (max-width: 400px) {
-		padding: 20px 30px;
+	p {
+		margin-bottom: 20px;
+		text-align: center;
+		color: #fff;
+	}
+
+	@media (max-width: 370px) {
+		padding: 10px 25px;
 	}
 }
 
