--- a/sass/blocks/page-top.scss
+++ b/sass/blocks/page-top.scss
@@ -14,6 +14,9 @@
 		@media (max-width: $tablet) {
 			top: 15%;
 		}
+		@media screen and (max-width: $mobile_full) {
+			top: 10%;
+		}
 	}
 	&:after {
 		content: "";
@@ -22,10 +25,13 @@
 		bottom: 0;
 		width: 100%;
 		height: 45rem;
-		background: url("../img/wave.png") no-repeat;
+		background: url("../img/wave.png") center no-repeat;
 		background-size: cover;
 		@media (max-width: $tablet) {
 			height: 65rem;
+		}
+		@media screen and (max-width: $mobile_full) {
+			height: 75rem;
 		}
 	}
 }
@@ -34,29 +40,35 @@
 	position: relative;
 	margin-bottom: 9rem;
 
-	p {
-		max-width: 28rem;
-		margin-top: 2.5rem;
-		font-size: 18px;
-
-		&:last-of-type {
-			margin-bottom: 2.5rem;
-		}
-		@media (max-width: $tablet) {
-			max-width: none;
-		}
-	}
 	@media (max-width: $tablet) {
 		margin-bottom: 20rem;
 		text-align: center;
+	}
+
+	p {
+		max-width: 33rem;
+		margin: 2.5rem 0;
+		font-size: 18px;
+
+		@media (max-width: $tablet) {
+			max-width: none;
+			margin: 15px 0;
+			br {
+				display: none;
+			}
+		}
+		@media (max-width: $mobile_full) {
+			text-align: justify;
+			font-size: 14px;
+		}
 	}
 }
 
 .page-top__title {
 	@include niceText;
 	padding-top: 3rem;
+	text-transform: uppercase;
 	font-size: 6rem;
-	line-height: 6rem;
 	font-weight: bold;
 	color: $color_title;
 	white-space: normal;
@@ -64,12 +76,21 @@
 	@media (max-width: $tablet_full) {
 		font-size: 36px;
 	}
+	@media screen and (max-width: $mobile_full) {
+		padding-top: 20px;
+		font-size: 24px !important;
+		line-height: 30px;
+
+	}
 }
 
 .page-top__subtitle {
-	font-size: 3.6rem;
+	font-size: 36px;
 	font-weight: bold;
 	color: $color_title;
+	@media screen and (max-width: $mobile_full) {
+		font-size: 24px;
+	}
 }
 
 // cards
@@ -79,14 +100,17 @@
 	display: flex;
 	padding: 3.5rem 0;
 
-	@media (max-width: $tablet) {
+	@media (max-width: 720px) {
 		flex-wrap: wrap;
 		justify-content: center;
+	}
+	@media (max-width: $mobile_full) {
+		padding: 0;
 	}
 }
 
 .page-top__item {
-	width: 23%;
+	width: 22%;
 	max-width: 255px;
 	background-color: #fff;
 	box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.2);
@@ -108,7 +132,7 @@
 		}
 	}
 
-	@media (max-width: $tablet) {
+	@media (max-width: 720px) {
 		width: 45%;
 		margin: 0 30px 20px 0;
 
@@ -117,11 +141,15 @@
 		&:last-child {margin-right: 0;} }
 
 	@media (max-width: 360px) {
-		width: 100%;
-		margin: 0;
-		margin-bottom: 20px;
+		width: 45%;
+		margin: 0 13px 20px 0;
+
 		&:not(:last-child) {
-			margin-right: 0; }
+			margin-right: 13px;
+		}
+		&:nth-child(2) {
+			margin-right: 0;
+		}
 	}
 }
 
@@ -137,15 +165,23 @@
 		min-height: inherit;
 		max-width: 100%;
 	}
+	@media (max-width: $mobile_full) {
+		height: 140px;
+	}
 }
 
 .page-top__item-content {
-	padding: 0 3rem;
+	padding: 0 2rem;
 	text-align: center;
+
+	@media (max-width: $mobile_full) {
+		padding: 0;
+	}
 }
 
 .page-top__item-name {
 	min-height: 40px;
+	padding: 3px;
 	text-decoration: underline;
 	color: $color_link;
 }
