--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -1,26 +1,31 @@
 .reasons {
-	padding: 0 30px 7rem !important;
+	padding: 0 30px 5rem !important;
+
+	@media (max-width: 1080px) {
+		padding: 20px 15px 0 !important;
+	}
+	@media (max-width: $mobile_full) {
+		padding: 20px 15px 7rem !important;
+	}
 }
 
 .reasons__list {
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-between;
-	padding: 30px 0;
+	margin-top: 20px;
+	padding: 35px 0;
 	background: url("../img/reasons-bg.png") center no-repeat;
 	background-size: 40%;
 
-	@media (max-width: 960px) {
-		padding-left: 50%;
-		background-position: left center;
-	}
-	@media screen and  (max-width: $tablet) {
-		padding-left: 25%;
-		background-position: -150px center;
-		background-size: 60%;
-	}
-	@media screen and  (max-width: $mobile_full) {
+	@media screen and (max-width: 640px) {
 		padding: 0;
+		background: none;
+	}
+	@media (max-width: 1080px) {
+		padding-left: 40%;
+		margin-top: 0;
+		background-position: left center;
 	}
 }
 
@@ -33,7 +38,7 @@
 	-webkit-transform: translateZ(0);
   -webkit-font-smoothing: antialiased;
 
-	@media (max-width: 960px) {
+	@media (max-width: 1080px) {
 		width: 100%;
 		padding: 2rem;
 		padding-left: 80px !important;
@@ -41,22 +46,29 @@
 		text-align: left !important;
 	}
 
+	@media screen and (max-width: 580px) {
+		padding: 10px 0 10px 10px;
+		padding-left: 70px !important;
+		margin-bottom: 10px;
+	}
+
 	// 1,5
 	&:nth-child(odd) {
-		padding-right: 130px;
+		padding-right: 165px;
+		padding-left: 0;
 		text-align: right;
 	}
 	// 2,6
 	&:nth-child(even) {
-		padding-left: 130px;
+		padding-left: 165px;
 	}
 	// 3
 	&:nth-child(3) {
-		padding-right: 170px;
+		padding-right: 200px;
 	}
 	// 4
 	&:nth-child(4) {
-		padding-left: 170px;
+		padding-left: 200px;
 	}
 
 	// inner of item
@@ -71,6 +83,7 @@
 		cursor: pointer;
 		color: $blue;
 		transition: all 0.3s;
+		@include niceText;
 
 		&:after {
 			content: "";
@@ -80,12 +93,6 @@
 			width: 100%;
 			height: 2px;
 			border-bottom: 1px dotted $orange;
-		}
-
-		&:active,
-		&:focus,
-		&:hover {
-			color: $orange;
 		}
 
 		@media (max-width: $mobile_full) {
@@ -113,7 +120,7 @@
 		background-color: rgb(255, 255, 255);
 		box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
 		transform: translateY(10px);
-		transition: all 0.3s ease-out;
+		transition: all 0.3s;
 
 		&:before {
 			content: " ";
@@ -143,10 +150,12 @@
 	&:before {
 		content: "";
 		position: absolute;
-		top: 30px;
-		display: inline-block;
-		width: 75px;
-		height: 75px;
+		top: 29px;
+		display: flex;
+		justify-content: center;
+    align-items: center;
+		width: 70px;
+		height: 70px;
 		text-align: center;
 		vertical-align: middle;
 		font-size: 30px;
@@ -155,17 +164,22 @@
 		color: #fff;
 		border-radius: 50%;
 		background-color: $blue;
+		transition: all 0.3s;
 
-		@media (max-width: 960px) {
-			width: 60px;
-			height: 60px;
-			line-height: 60px;
-			top: 0!important;
+		@media (max-width: 1080px) {
+			width: 55px;
+			height: 55px;
+			line-height: 55px;
+			top: 5px!important;
 			left: 0!important;
 		}
+		@media screen and (max-width: 580px) {
+			top: -5px !important;
+		}
 		@media screen and (max-width: $mobile_full) {
-			width: 45px;
-			height: 45px;
+			top: -10px;
+			width: 40px;
+			height: 40px;
 			line-height: 45px;
 		}
 	}
@@ -173,47 +187,55 @@
 	// numbers in circle
 	&:first-child:before {
 		content: "1";
-		right: 45px;
+		right: 65px;
 	}
 
 	&:nth-child(2):before {
 		content: "4";
-		left: 45px;
+		left: 65px;
 	}
 
 	&:nth-child(3):before {
 		content: "2";
-		right: 85px;
+		right: 100px;
 	}
 
 	&:nth-child(4):before {
 		content: "5";
-		left: 85px;
+		left: 100px;
 	}
 
 	&:nth-child(5):before {
 		content: "3";
-		right: 45px;
+		right: 65px;
 	}
 
 	&:last-child:before {
 		content: "6";
-		left: 45px;
+		left: 65px;
 	}
 	// hover on item
+	&:active,
+	&:focus,
 	&:hover {
 		cursor: pointer;
 
+		label {
+			color: $orange;
+		}
 		article {
 			opacity: 1;
 			pointer-events: auto;
 			transform: translateY(0px);
 		}
+		&:before {
+			background-color: $orange;
+		}
 	}
 }
 
 // mobile - accordion
-@media (max-width: 960px) {
+@media (max-width: 1080px) {
 	.reasons__item article {
 		position: relative;
 		bottom: auto;
@@ -233,4 +255,10 @@
 		box-shadow: none;
 		height: auto;
 	}
+
+	.reasons__item:nth-child(2) { order: 4; }
+	.reasons__item:nth-child(3) { order: 2; }
+	.reasons__item:nth-child(4) { order: 5; }
+	.reasons__item:nth-child(5) { order: 3; }
+	.reasons__item:nth-child(6) { order: 6; }
 }
