--- a/sass/blocks/special.scss
+++ b/sass/blocks/special.scss
@@ -11,10 +11,10 @@
 	// image wrapper
 	&:first-child {
 		position: absolute;
-		top: -140px;
+		bottom: 0;
 		left: 30px;
-		width: 40%;
-		min-height: 370px;
+		width: 35%;
+		min-height: 380px;
 		background-color: #fff;
 		overflow: hidden;
 		@media (max-width: 960px) {
@@ -22,40 +22,50 @@
 			bottom: 0;
 			top: auto;
 		}
-		@media (max-width: $tablet) {
+		@media (max-width: 720px) {
 			position: relative;
 			width: 115%;
 			transform: translateX(-20px);
 		}
+		@media (max-width: $mobile_full) {
+			min-height: 268px;
+		}
 	}
 	// text part
 	&:last-child {
-		width: 60%;
+		width: 65%;
 		float: right;
 		padding: 0 20px 0 40px;
-		@media (max-width: $tablet) {
+		@media (max-width: 720px) {
 			width: 100%;
 			float: none;
 			text-align: center;
+			padding: 0;
 		}
 	}
 	// inner
 	.title {
-		padding: 3rem 0;
+		padding: 30px 0;
 		text-align: left;
-		@media (max-width: $tablet) {
+		@media (max-width: 720px) {
 			text-align: center;
 		}
+		@media (max-width: $mobile_full) {
+			padding: 20px 0;
+		}
 	}
+
 	p {
-		margin-bottom: 30px;
+		margin-bottom: 25px;
 		color: #fff;
+		@media (max-width: $mobile_full) {
+			margin-bottom: 15px;
+		}
 	}
+
 	img {
 		@include centerImg;
 	}
-	// media
-
 }
 
 .special__phone {
@@ -70,6 +80,9 @@
 		@media (max-width: 960px) {
 			display: block;
 			margin: 0;
+		}
+		@media (max-width: $mobile_full) {
+			font-size: 30px;
 		}
 	}
 }
